--- a/package.json
+++ b/package.json
@@ -1,32 +1,4 @@
 {
-  "_args": [
-    [
-      "react-navigation@2.6.2",
-      "/Users/zhanglinfeimacair/workroom/coding/iwos-phone/iwos"
-    ]
-  ],
-  "_from": "git+https://github.com/linfeizhang/react-navigation.git",
-  "_id": "react-navigation@2.6.2",
-  "_inBundle": false,
-  "_integrity": "sha1-qP22nFh2aY9+WMWjlip4uiS7IFg=",
-  "_location": "/react-navigation",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "react-navigation@git+https://github.com/linfeizhang/react-navigation.git",
-    "name": "react-navigation",
-    "escapedName": "react-navigation",
-    "rawSpec": "git+https://github.com/linfeizhang/react-navigation.git",
-    "saveSpec": "git+https://github.com/linfeizhang/react-navigation.git",
-    "fetchSpec": "https://github.com/linfeizhang/react-navigation.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "git+https://github.com/linfeizhang/react-navigation.git#884ba447fe091161ce7ca0d0cc773cec5c8a51d7",
-  "_spec": "react-navigation@git+https://github.com/linfeizhang/react-navigation.git",
-  "_where": "/Volumes/Mac/workroom/coding/smartfleet-user-app",
   "author": {
     "name": "linfeizhang"
   },
@@ -113,7 +85,7 @@
     ]
   },
   "main": "src/react-navigation.js",
-  "name": "react-navigation",
+  "name": "zh-react-navigation",
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
